Add database support.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,8 @@ authors = ["Maplewing <sinmaplewing@gmail.com>"]
 [dependencies]
 rocket = "0.3.8"
 rocket_codegen = "0.3.8"
-diesel = { version = "1.1", features = ["sqlite", "r2d2"] }
+rusqlite = "*"
+chrono = "*"
 
 [dependencies.rocket_contrib]
 version = "*"
